Add EWA Config Info

--- a/VotingRewardMod/VotingRewardMod.csproj
+++ b/VotingRewardMod/VotingRewardMod.csproj
@@ -71,6 +71,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ILMerge.props" />
+    <Content Include="ModAppConfig.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -78,7 +81,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(TargetDir)*.*" "C:\steamcmd\empyrion\Content\Mods\ModLoader\MODs\VotingRewardMod\*.*" /Y</PostBuildEvent>
+    <PostBuildEvent>xcopy "$(TargetDir)*.*" "C:\steamcmd\empyrion\Content\Mods\ModLoader\MODs\VotingRewardMod\*.*" /Y
+del "C:\steamcmd\empyrion\Content\Mods\ModLoader\MODs\VotingRewardMod\*.pdb"</PostBuildEvent>
   </PropertyGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
