--- a/VotingRewardMod/VotingRewardMod.csproj
+++ b/VotingRewardMod/VotingRewardMod.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>VotingRewardMod</RootNamespace>
     <AssemblyName>VotingRewardMod</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
@@ -35,34 +35,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EmpyrionNetAPIAccess">
-      <HintPath>..\dependencies\EmpyrionNetAPIAccess.dll</HintPath>
-    </Reference>
-    <Reference Include="EmpyrionNetAPIDefinitions">
-      <HintPath>..\dependencies\EmpyrionNetAPIDefinitions.dll</HintPath>
-    </Reference>
-    <Reference Include="EmpyrionNetAPITools">
-      <HintPath>..\dependencies\EmpyrionNetAPITools.dll</HintPath>
+    <Reference Include="EmpyrionNetAPI">
+      <HintPath>..\dependencies\EmpyrionNetAPI.dll</HintPath>
     </Reference>
     <Reference Include="Mif">
       <HintPath>..\dependencies\Mif.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\dependencies\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-    <Reference Include="YamlDotNet">
-      <HintPath>..\dependencies\YamlDotNet.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="RewardModConfiguration.cs" />
